# burnup-chart-js

./: .gitignore  README.md  dist.tar  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
.github/workflows/: ci.yml
backend/: README.md  audit.py  auth.py  backup.py  db.py  main.py  migrate.py  models.py  permissions.py  pyproject.toml
backend/routers/: activity.py  audit.py  auth_routes.py  logs.py  projects.py  statuses.py  sub_projects.py  tasks.py  time_entries.py  todos.py
backend/tests/: test_activity.py  test_api.py  test_audit.py  test_backup.py  test_time_entries.py
e2e/: auth-helper.js  auth.spec.js  burnup.spec.js  custom-statuses.spec.js  global-setup.js  global-teardown.js  next-ui.spec.js  test-config.js
src/: App.jsx  AppRoot.jsx  NewApp.jsx  api.js  index.css  main.jsx  test-setup.js
src/__tests__/: AuditLogPanel.test.jsx  LoginPage.test.jsx  TodoCard.test.jsx  UserMenu.test.jsx  api.test.js
src/audit/: AuditLogPanel.jsx
src/auth/: AdminPanel.jsx  AuthContext.jsx  LoginPage.jsx  UserMenu.jsx
src/components/: EmptyProject.jsx  KeyboardShortcutsHelp.jsx  SearchModal.jsx  SubProjectFormModal.jsx  SubProjectSection.jsx  TodoBoard.jsx  TodoCard.jsx  TodoFormModal.jsx  TodoSection.jsx
src/components/burnup/: KpiStrip.jsx  (+7 more)
src/design/: formatTime.js  formatTime.test.js  primitives.jsx  tokens.js  tokens.test.js
src/hooks/: useAppData.js
src/pages/: BurnupPage.jsx  GanttPage.jsx  LoginPage.jsx  MergedPage.jsx  SubProjectsPage.jsx  TimeLogPage.jsx  TodosPage.jsx
src/utils/: assigneeColor.js
(+20 files in other folders)
